--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services: docker
 env:
   matrix:
   - ARCH=x86_64 PUID=1000 PGID=1000
-  - ARCH=armhf PUID=1001 PGID=1001
+#  - ARCH=armhf PUID=1001 PGID=1001
   global:
 install: true
 before_script:
